Fix #287: Modify style: set left alignment for text

--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -394,7 +394,7 @@ progress {
 
 	p {
 		margin: 0 0 1.625em;
-		text-align: justify;
+		text-align: left;
 	}
 }
 
